Fix format button spacing

--- a/components/menus/FixedFormatMenu.module.css
+++ b/components/menus/FixedFormatMenu.module.css
@@ -16,7 +16,7 @@
 	align-items: center;
 	border-radius: var(--border-radius-large);
 	border: 2px solid var(--color-secondary-400);
-	backdrop-filter: blur(3px);
+	backdrop-filter: blur(4px);
 	box-sizing: border-box;
 	position: relative;
 }
@@ -40,6 +40,6 @@
 	height: 3em;
 }
 
-.button:not(:last-child) {
+.elementSpacer:not(:last-child) {
 	margin-right: var(--spacing-small);
 }
